--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,15 +8,56 @@
     android:layout_height="match_parent"
     tools:context="co.ilife.portfolio.MainActivity"
     >
-
   <TextView
+      android:id="@+id/textView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="@+id/activity_main"
-      app:layout_constraintLeft_toLeftOf="@+id/activity_main"
-      app:layout_constraintRight_toRightOf="@+id/activity_main"
-      app:layout_constraintTop_toTopOf="@+id/activity_main"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="12dp"
+      android:textSize="16sp"
+      android:text="@string/my_nanodegree_apps"
       />
 
-</android.support.constraint.ConstraintLayout>
+  <Button
+      android:id="@+id/btnPopMovie"
+      android:layout_below="@id/textView"
+      android:text="@string/pop_movie"
+      style="@style/button"
+      />
+
+  <Button
+      android:id="@+id/btnStockHawk"
+      android:layout_below="@id/btnPopMovie"
+      android:text="@string/stock_hawk"
+      style="@style/button"
+      />
+
+  <Button
+      android:id="@+id/btnBuildItBigger"
+      android:layout_below="@id/btnStockHawk"
+      android:text="@string/build_it_bigger"
+      style="@style/button"
+      />
+
+  <Button
+      android:id="@+id/btnMakeMaterial"
+      android:layout_below="@id/btnBuildItBigger"
+      android:text="@string/make_your_app_material"
+      style="@style/button"
+      />
+
+  <Button
+      android:id="@+id/btnUbiquitous"
+      android:layout_below="@id/btnMakeMaterial"
+      android:text="@string/go_ubiquitous"
+      style="@style/button"
+      />
+
+  <Button
+      android:id="@+id/btnCapstone"
+      android:layout_below="@id/btnUbiquitous"
+      android:background="@color/button_capstone"
+      android:text="@string/capstone"
+      style="@style/button"/>
+
+</RelativeLayout>
