--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,13 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="button" parent="AppTheme">
+    <item name="android:layout_width">169dp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_centerHorizontal">true</item>
+    <item name="android:background">@color/button</item>
+    <item name="android:layout_margin">@dimen/item_margin</item>
+    <item name="android:textColor">@android:color/white</item>
+  </style>
+
 </resources>
